Fix step 2 layout for mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="destovka-main-text" >
                         <h1>Konfigurátor vaší nádrže na dešťovou vodu</h1>
                         <button class="destovka-autofill-button">Vyplnit ukázková data</button>
-                        <img src="obrazek.png" alt="tady" style="height: 300px; width: auto;">
+                        <img src="obrazek.png" alt="tady">
                         <script>
                             document.querySelector('.destovka-autofill-button').addEventListener('click', () => {
                             const sampleData = {
@@ -250,16 +250,14 @@
             <div id="destovkaTanksContainer" class="destovka-tanks-container">
                 <!-- Sem se automaticky vloží 3 nádrže z JSONu -->
             </div>
-    
-        
-        <div class="destovka-button-group">
-            <button class="destovka-button destovka-button-back">
-                Předchozí krok
-            </button>
-            <button class="destovka-button destovka-button-next">
-                Pokračovat  
-            </button>
-        </div>
+    </div>
+    <div class="destovka-button-group">
+        <button class="destovka-button destovka-button-back">
+            Předchozí krok
+        </button>
+        <button class="destovka-button destovka-button-next">
+            Pokračovat  
+        </button>
     </div>
         </section>
 
