--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
 
 
 
-
     </div>
 
     <script src="script-sidebar.js"></script>
     <script src="script-main-container.js"></script>
     <script src="script.js"></script>
+    <script src="product-structure-generator.js"></script>
 </body>
 </html>
