--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-nadrz.css">
     <link rel="stylesheet" href="style-m.css">
+    <link rel="stylesheet" href="style-accessory.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -424,7 +425,10 @@
     </div>
 
     <script src="script-sidebar.js"></script>
+    <script src="product-structure-generator.js"></script>
     <script src="script-main-container.js"></script>
     <script src="script.js"></script>
+    
+    
 </body>
 </html>
